# python_env_manager

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev_tools.md  dev_tools.sh  implementation_plan.md  pyproject.toml  pyvenv.cfg  summary.md  test_import.py  test_progress.py
.github/workflows/: README.md  deploy.yml  pytest.yml  release.yml
docs/: implementation_plan.md  progress_bar.md
env_manager/: README.md  __init__.py  dev_tools.py  env_local.py  env_manager.md  env_manager.py  environment.py  package_manager.py  program_state.py  progress_runner.py
env_manager/runners/: __init__.py  irunner.py  local_runner.py  progress_runner.py  runner.py  runner_factory.py
examples/: progress_bar_example.py  simple_progress_test.py  test_progress_runner.py
tests/: conftest.py  test_env_local.py  test_env_manager.py  test_env_manager_integration.py  test_environment.py  test_local_runner.py  test_package_manager.py  test_program_state.py  test_progress_runner.py  test_runner.py  test_runner_factory.py  test_version.py
